--- a/styles/style.css
+++ b/styles/style.css
@@ -16,12 +16,23 @@
     position: fixed;
     top: 0;
     width: 100%;
+    /*list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+    position: sticky;
+    top: 0;*/
 }
 header {
     background-image: url('https://img.freepik.com/foto-gratis/monstera-deja-textura-selva-tropical_99852-13.jpg?w=740');
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
+    padding-top: 100px;
+    padding-right: 30px;
+    padding-bottom: 500px;
+    padding-left: 80px;
 }
 h1 {
     display: flex;
@@ -32,6 +43,7 @@ h1 {
     color: white;
     font-size: 45px;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    margin-left: 25%;
 }
 .boton {
   background-color: rgb(0, 139, 86);
