--- a/styles/style.css
+++ b/styles/style.css
@@ -5,6 +5,7 @@
     width: 20px;
     height: 50px;
 }
+
 .contenedorA {
     display: flex;
     justify-content: left;
@@ -24,6 +25,7 @@
     position: sticky;
     top: 0;*/
 }
+
 header {
     background-image: url('https://img.freepik.com/foto-gratis/monstera-deja-textura-selva-tropical_99852-13.jpg?w=740');
     background-repeat: no-repeat;
@@ -34,6 +36,7 @@ header {
     padding-bottom: 500px;
     padding-left: 80px;
 }
+
 h1 {
     display: flex;
     justify-content: left;
@@ -45,6 +48,7 @@ h1 {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     margin-left: 25%;
 }
+
 .boton {
   background-color: rgb(0, 139, 86);
   border: none;
@@ -54,4 +58,33 @@ h1 {
   text-decoration: none;
   display: inline-block;
   font-size: 16px;
+}
+
+main {
+    background-color: white;
+}
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: white;
+}
+
+li {
+  display: inline;
+  float: left;
+}
+
+li a {
+  display: block;
+  color: Black;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+li a:hover {
+  background-color: white;
 }
