--- a/styles/style.css
+++ b/styles/style.css
@@ -4,6 +4,8 @@
     align-items: left;
     width: 20px;
     height: 50px;
+    margin-top: 15px;
+    margin-left: -70px;
 }
 
 .contenedorA {
@@ -48,16 +50,29 @@ h1 {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     margin-left: 25%;
 }
+#suge {
+  display: flex;
+    justify-content: left;
+    align-items: left;
+    width: 600px;
+    height: 50px;
+    color: white;
+    font-size: 15px;
+    margin-left: 25%;
+    margin-top: 20%;
+}
 
 .boton {
   background-color: rgb(0, 139, 86);
   border: none;
   color: white;
-  padding: 15px 32px;
+  padding: 10px 20px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
   font-size: 16px;
+  margin-left: 10px;
+  margin-top: 15px;
 }
 
 main {
@@ -70,6 +85,7 @@ ul {
   padding: 0;
   overflow: hidden;
   background-color: white;
+  margin-left: 35%;
 }
 
 li {
