--- a/styles/style.css
+++ b/styles/style.css
@@ -19,13 +19,6 @@
     position: fixed;
     top: 0;
     width: 100%;
-    /*list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: #333;
-    position: sticky;
-    top: 0;*/
 }
 
 header {
@@ -35,7 +28,7 @@ header {
     background-attachment: fixed;
     padding-top: 100px;
     padding-right: 30px;
-    padding-bottom: 500px;
+    padding-bottom: 150px;
     padding-left: 80px;
 }
 
@@ -48,7 +41,7 @@ h1 {
     color: white;
     font-size: 45px;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    margin-left: 25%;
+    margin-left: 23.5%;
 }
 #suge {
   display: flex;
@@ -58,11 +51,11 @@ h1 {
     height: 50px;
     color: white;
     font-size: 15px;
-    margin-left: 25%;
-    margin-top: 20%;
+    margin-left: 23.5%;
+    margin-top: 10px;
 }
 
-.boton {
+.boton:link, .boton:visited {
   background-color: rgb(0, 139, 86);
   border: none;
   color: white;
@@ -71,8 +64,17 @@ h1 {
   text-decoration: none;
   display: inline-block;
   font-size: 16px;
-  margin-left: 10px;
+  margin-left: 35px;
   margin-top: 15px;
+}
+.boton:hover, .boton:active {
+  background-color: rgb(3, 190, 75);
+}
+
+.busqueda {
+  margin-top: 140px;
+  margin-left: 23.5%;
+  padding: 10px 250px;
 }
 
 main {
@@ -80,12 +82,14 @@ main {
 }
 
 ul {
+  font-size: 20px;
+  font-family: monospace;
   list-style-type: none;
   margin: 0;
   padding: 0;
   overflow: hidden;
   background-color: white;
-  margin-left: 35%;
+  margin-left: 32%;
 }
 
 li {
@@ -102,5 +106,34 @@ li a {
 }
 
 li a:hover {
-  background-color: white;
+  color: rgb(43, 6, 250);
+  text-decoration: underline;
+}
+
+.contenedorB {
+    display: flex;
+    justify-content: left;
+    align-items: left;
+    width: 20px;
+    height: 50px;
+    color: white;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    position: fixed;
+    top: 0;
+    width: 100%;
+
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+    position: sticky;
+    top: 0;
+    padding: 10px;
+}
+
+.busqueda2 {
+  margin-top: 2.5px;
+  margin-left: 1%;
+  padding: 10px 250px;
 }
