--- a/styles/style.css
+++ b/styles/style.css
@@ -116,8 +116,33 @@ li a:hover {
   transition: background-color 200ms linear;
   width: 1300px;
   height: 75px;
+  padding: -50px;
 }
 
-#imag {
-  width: 60px;
+/*.imag {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  width: 60vw;
+  height: 900vh;
+  margin: auto;
+}
+
+.imag im {
+  width: 26vw;
+  margin-bottom: 20px;
+}*/
+
+.imag {
+  display: flex;
+  flex-wrap: nowrap;
+  background-color: rgb(248, 250, 252);
+}
+
+.imag > div {
+  background-color: #f1f1f1;
+  width: 100px;
+  margin: 10px;
+  text-align: center;
+  line-height: 75px;
 }
