--- a/styles/style.css
+++ b/styles/style.css
@@ -2,10 +2,10 @@
     display: flex;
     justify-content: left;
     align-items: left;
-    width: 20px;
+    width: 2.5%;
     height: 50px;
-    margin-top: 5px;
-    margin-left: 20px;
+    margin-top: .5%;
+    margin-left: 1%;
 }
 
 .navegacion {
@@ -18,8 +18,8 @@
     display: flex;
     justify-content: left;
     align-items: left;
-    width: 20px;
-    height: 50px;
+    width: 0;
+    height: 0;
     color: white;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     position: fixed;
@@ -33,20 +33,20 @@ header {
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
-    padding-top: 100px;
-    padding-right: 30px;
-    padding-bottom: 150px;
-    padding-left: 80px;
+    padding-top: 10%;
+    padding-right: 0;
+    padding-bottom: 10%;
+    padding-left: 6%;
 }
 
 h1 {
     display: flex;
     justify-content: left;
     align-items: left;
-    width: 600px;
+    width: 45%;
     height: 50px;
     color: white;
-    font-size: 45px;
+    font-size: 270%;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     margin-left: 23.5%;
 }
@@ -54,35 +54,35 @@ h1 {
   display: flex;
     justify-content: left;
     align-items: left;
-    width: 600px;
+    width: 45%;
     height: 50px;
     color: white;
-    font-size: 15px;
+    font-size: 90%;
     margin-left: 23.5%;
-    margin-top: 10px;
+    margin-top: 1%;
 }
 
 .boton:link, .boton:visited {
   background-color: rgb(0, 139, 86);
   border: none;
   color: white;
-  padding: 10px 20px;
+  padding: 30% 50%;
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  font-size: 16px;
-  margin-left: 700px;
-  margin-top: 15px;
+  font-size: 100%;
+  margin-left: 2090%;
+  margin-top: 30%;
 }
 .boton:hover, .boton:active {
   background-color: rgb(3, 190, 75);
 }
 
 .busqueda {
-  margin-top: 140px;
+  margin-top: 12%;
   margin-left: 23.5%;
-  width: 600px;
-  height: 40px;
+  height: 30px;
+  width: 45%;
 }
 
 main {
@@ -90,14 +90,14 @@ main {
 }
 
 ul {
-  font-size: 20px;
+  font-size: 170%;
   font-family: monospace;
   list-style-type: none;
   margin: 0;
   padding: 0;
   overflow: hidden;
   background-color: white;
-  margin-left: 32%;
+  margin-left: 25%;
 }
 
 li {
@@ -109,7 +109,6 @@ li a {
   display: block;
   color: Black;
   text-align: center;
-  padding: 14px 16px;
   text-decoration: none;
 }
 
@@ -121,14 +120,15 @@ li a:hover {
 .contenedorA.scrolled {
   background-color: #333 !important;
   transition: background-color 200ms linear;
-  width: 1333px;
-  height: 60px;
+  width: 98.8%;
+  height: 10%;
 }
 
 img {
-  width: 250px;
-  margin: 5px;
+  width: 30%;
+  margin: .2%;
 }
+
 
 .new_imag {
   display: flex; 
