--- a/styles/style.css
+++ b/styles/style.css
@@ -124,13 +124,18 @@ li a:hover {
   height: 10%;
 }
 
-img {
-  width: 30%;
-  margin: .2%;
+.column img {
+  width: 100%;
+  margin: 1%;
 }
 
-
-.new_imag {
-  display: flex; 
+.row {
+  display: flex;
+  padding: 5px;
   flex-wrap: wrap;
+}
+
+.column {
+  flex: 25%;
+  padding: 5px;
 }
