--- a/styles/style.css
+++ b/styles/style.css
@@ -124,6 +124,38 @@ li a:hover {
   height: 10%;
 }
 
+.trending {
+  margin-left: 16%;
+    margin-right: 16%;
+    height: 56.4px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+@font-face {
+  font-family: 'Material Icons Outlined';
+  font-style: normal;
+  font-weight: 400;
+  src: url(https://fonts.gstatic.com/s/materialiconsoutlined/v100/gok-H7zzDkdnRel8-DQ6KAXJ69wP1tGnf4ZGhUce.woff2) format('woff2');
+}
+
+.material-icons-outlined {
+    font-family: 'Material Icons Outlined';
+    font-weight: normal;
+    font-style: normal;
+    font-size: 24px;
+    line-height: 1;
+    letter-spacing: normal;
+    text-transform: none;
+    display: inline-block;
+    white-space: nowrap;
+    word-wrap: normal;
+    direction: ltr;
+    /*-webkit-font-feature-settings: 'liga';*/
+    -webkit-font-smoothing: antialiased;
+}
+
 .column img {
   width: 100%;
   margin: 1%;
@@ -138,4 +170,9 @@ li a:hover {
 .column {
   flex: 25%;
   padding: 5px;
+}
+
+* {
+  margin: 0;
+  padding: 0;
 }
