--- a/styles/style.css
+++ b/styles/style.css
@@ -152,6 +152,186 @@ li a:hover {
     white-space: nowrap;
     word-wrap: normal;
     direction: ltr;
+    -webkit-font-smoothing: antialiased;
+}
+
+.column img {
+  width: 100%;
+  margin: 1%;
+}
+
+.row {
+  display: flex;
+  padding: 5px;
+  flex-wrap: wrap;
+}
+
+.column {
+  flex: 25%;
+  padding: 5px;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+} 
+
+/*PC*/
+@media screen and (max-width: 1508px) and (min-width: 821px) {
+  #logo {
+    display: flex;
+    justify-content: left;
+    align-items: left;
+    width: 2.5%;
+    height: 50px;
+    margin-top: .5%;
+    margin-left: 1%;
+}
+
+.navegacion {
+  display: flex;
+  justify-content: left;
+  align-items: left;
+}
+
+.contenedorA {
+    display: flex;
+    justify-content: left;
+    align-items: left;
+    width: 0;
+    height: 0;
+    color: white;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    margin-left: -80px;
+}
+
+header {
+    background-image: url('https://img.freepik.com/foto-gratis/monstera-deja-textura-selva-tropical_99852-13.jpg?w=740');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    padding-top: 10%;
+    padding-right: 0;
+    padding-bottom: 10%;
+    padding-left: 6%;
+}
+
+h1 {
+    display: flex;
+    justify-content: left;
+    align-items: left;
+    width: 45%;
+    height: 50px;
+    color: white;
+    font-size: 270%;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    margin-left: 23.5%;
+}
+#suge {
+    display: flex;
+    justify-content: left;
+    align-items: left;
+    width: 45%;
+    height: 50px;
+    color: white;
+    font-size: 90%;
+    margin-left: 23.5%;
+    margin-top: 1%;
+}
+
+.boton:link, .boton:visited {
+  background-color: rgb(0, 139, 86);
+  border: none;
+  color: white;
+  padding: 30% 50%;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 100%;
+  margin-left: 2090%;
+  margin-top: 30%;
+}
+.boton:hover, .boton:active {
+  background-color: rgb(3, 190, 75);
+}
+
+.busqueda {
+  margin-top: 12%;
+  margin-left: 23.5%;
+  height: 30px;
+  width: 45%;
+}
+
+main {
+    background-color: white;
+}
+
+ul {
+  font-size: 170%;
+  font-family: monospace;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: white;
+  margin-left: 25%;
+}
+
+li {
+  display: inline;
+  float: left;
+}
+
+li a {
+  display: block;
+  color: Black;
+  text-align: center;
+  text-decoration: none;
+}
+
+li a:hover {
+  color: rgb(43, 6, 250);
+  text-decoration: underline;
+}
+
+.contenedorA.scrolled {
+  background-color: #333 !important;
+  transition: background-color 200ms linear;
+  width: 98.8%;
+  height: 10%;
+}
+
+.trending {
+  margin-left: 16%;
+    margin-right: 16%;
+    height: 56.4px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+@font-face {
+  font-family: 'Material Icons Outlined';
+  font-style: normal;
+  font-weight: 400;
+  src: url(https://fonts.gstatic.com/s/materialiconsoutlined/v100/gok-H7zzDkdnRel8-DQ6KAXJ69wP1tGnf4ZGhUce.woff2) format('woff2');
+}
+
+.material-icons-outlined {
+    font-family: 'Material Icons Outlined';
+    font-weight: normal;
+    font-style: normal;
+    font-size: 24px;
+    line-height: 1;
+    letter-spacing: normal;
+    text-transform: none;
+    display: inline-block;
+    white-space: nowrap;
+    word-wrap: normal;
+    direction: ltr;
     /*-webkit-font-feature-settings: 'liga';*/
     -webkit-font-smoothing: antialiased;
 }
@@ -176,18 +356,367 @@ li a:hover {
   margin: 0;
   padding: 0;
 }
-
-/*PC*/
-@media screen and (max-width: 1024px) and (min-widht: 821px) {
-  
 }
 
 /*Tablet*/
-@media screen and (max-width: 820px) and (min-widht: 415px) {
-  
+@media screen and (max-width: 820px) and (min-width: 415px) {
+  #logo {
+    display: flex;
+    justify-content: left;
+    align-items: left;
+    width: 2.5%;
+    height: 50px;
+    margin-top: .5%;
+    margin-left: 1%;
 }
 
+.navegacion {
+  display: flex;
+  justify-content: left;
+  align-items: left;
+}
+
+.contenedorA {
+    display: flex;
+    justify-content: left;
+    align-items: left;
+    width: 0;
+    height: 0;
+    color: white;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    margin-left: -80px;
+}
+
+header {
+    background-image: url('https://img.freepik.com/foto-gratis/monstera-deja-textura-selva-tropical_99852-13.jpg?w=740');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    padding-top: 10%;
+    padding-right: 0;
+    padding-bottom: 10%;
+    padding-left: 6%;
+}
+
+h1 {
+    display: flex;
+    justify-content: left;
+    align-items: left;
+    width: 45%;
+    height: 50px;
+    color: white;
+    font-size: 270%;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    margin-left: 23.5%;
+}
+#suge {
+    display: flex;
+    justify-content: left;
+    align-items: left;
+    width: 45%;
+    height: 50px;
+    color: white;
+    font-size: 90%;
+    margin-left: 23.5%;
+    margin-top: 1%;
+}
+
+.boton:link, .boton:visited {
+  background-color: rgb(0, 139, 86);
+  border: none;
+  color: white;
+  padding: 30% 50%;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 100%;
+  margin-left: 2090%;
+  margin-top: 30%;
+}
+.boton:hover, .boton:active {
+  background-color: rgb(3, 190, 75);
+}
+
+.busqueda {
+  margin-top: 12%;
+  margin-left: 23.5%;
+  height: 30px;
+  width: 45%;
+}
+
+main {
+    background-color: white;
+}
+
+ul {
+  font-size: 170%;
+  font-family: monospace;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: white;
+  margin-left: 25%;
+}
+
+li {
+  display: inline;
+  float: left;
+}
+
+li a {
+  display: block;
+  color: Black;
+  text-align: center;
+  text-decoration: none;
+}
+
+li a:hover {
+  color: rgb(43, 6, 250);
+  text-decoration: underline;
+}
+
+.contenedorA.scrolled {
+  background-color: #333 !important;
+  transition: background-color 200ms linear;
+  width: 98.8%;
+  height: 10%;
+}
+
+.trending {
+  margin-left: 16%;
+    margin-right: 16%;
+    height: 56.4px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+@font-face {
+  font-family: 'Material Icons Outlined';
+  font-style: normal;
+  font-weight: 400;
+  src: url(https://fonts.gstatic.com/s/materialiconsoutlined/v100/gok-H7zzDkdnRel8-DQ6KAXJ69wP1tGnf4ZGhUce.woff2) format('woff2');
+}
+
+.material-icons-outlined {
+    font-family: 'Material Icons Outlined';
+    font-weight: normal;
+    font-style: normal;
+    font-size: 24px;
+    line-height: 1;
+    letter-spacing: normal;
+    text-transform: none;
+    display: inline-block;
+    white-space: nowrap;
+    word-wrap: normal;
+    direction: ltr;
+    -webkit-font-smoothing: antialiased;
+}
+
+.column img {
+  width: 100%;
+  margin: 1%;
+}
+
+.row {
+  display: flex;
+  padding: 5px;
+  flex-wrap: wrap;
+}
+
+.column {
+  flex: 33.33%;
+  padding: 5px;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+}
+}
+
+
 /*Celular*/
-@media screen and (max-width: 414px) and (min-widht: 1px) {
-  
+@media screen and (max-width: 414px) and (min-width: 1px) {
+  #logo {
+    display: flex;
+    justify-content: left;
+    align-items: left;
+    width: 2.5%;
+    height: 50px;
+    margin-top: .5%;
+    margin-left: 1%;
+}
+
+.navegacion {
+  display: flex;
+  justify-content: left;
+  align-items: left;
+}
+
+.contenedorA {
+    display: flex;
+    justify-content: left;
+    align-items: left;
+    width: 0;
+    height: 0;
+    color: white;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    margin-left: -80px;
+}
+
+header {
+    background-image: url('https://img.freepik.com/foto-gratis/monstera-deja-textura-selva-tropical_99852-13.jpg?w=740');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    padding-top: 10%;
+    padding-right: 0;
+    padding-bottom: 10%;
+    padding-left: 6%;
+}
+
+h1 {
+    display: flex;
+    justify-content: left;
+    align-items: left;
+    width: 45%;
+    height: 50px;
+    color: white;
+    font-size: 270%;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    margin-left: 23.5%;
+}
+#suge {
+    display: flex;
+    justify-content: left;
+    align-items: left;
+    width: 45%;
+    height: 50px;
+    color: white;
+    font-size: 90%;
+    margin-left: 23.5%;
+    margin-top: 1%;
+}
+
+.boton:link, .boton:visited {
+  background-color: rgb(0, 139, 86);
+  border: none;
+  color: white;
+  padding: 30% 50%;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 100%;
+  margin-left: 2090%;
+  margin-top: 30%;
+}
+.boton:hover, .boton:active {
+  background-color: rgb(3, 190, 75);
+}
+
+.busqueda {
+  margin-top: 12%;
+  margin-left: 23.5%;
+  height: 30px;
+  width: 45%;
+}
+
+main {
+    background-color: white;
+}
+
+ul {
+  font-size: 170%;
+  font-family: monospace;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: white;
+  margin-left: 25%;
+}
+
+li {
+  display: inline;
+  float: left;
+}
+
+li a {
+  display: block;
+  color: Black;
+  text-align: center;
+  text-decoration: none;
+}
+
+li a:hover {
+  color: rgb(43, 6, 250);
+  text-decoration: underline;
+}
+
+.contenedorA.scrolled {
+  background-color: #333 !important;
+  transition: background-color 200ms linear;
+  width: 98.8%;
+  height: 10%;
+}
+
+.trending {
+  margin-left: 16%;
+    margin-right: 16%;
+    height: 56.4px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+@font-face {
+  font-family: 'Material Icons Outlined';
+  font-style: normal;
+  font-weight: 400;
+  src: url(https://fonts.gstatic.com/s/materialiconsoutlined/v100/gok-H7zzDkdnRel8-DQ6KAXJ69wP1tGnf4ZGhUce.woff2) format('woff2');
+}
+
+.material-icons-outlined {
+    font-family: 'Material Icons Outlined';
+    font-weight: normal;
+    font-style: normal;
+    font-size: 24px;
+    line-height: 1;
+    letter-spacing: normal;
+    text-transform: none;
+    display: inline-block;
+    white-space: nowrap;
+    word-wrap: normal;
+    direction: ltr;
+    -webkit-font-smoothing: antialiased;
+}
+
+.column img {
+  width: 100%;
+  margin: 1%;
+}
+
+.row {
+  display: flex;
+  padding: 5px;
+  flex-wrap: wrap;
+}
+
+.column {
+  flex: 50%;
+  padding: 5px;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+}
 }
